--- a/public/index.html
+++ b/public/index.html
@@ -334,4 +334,16 @@ Tools Hcxdumptool git clone https://github.com/ZerBea/hcxdumptool.git cd hcxdump
 </footer>
 
   </body>
+  
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-L94GQE5C3S', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
 </html>
